[package]
name = "bencher"
version = "0.1.0"
authors = ["Justin Goldizen <justin.r.goldizen@gmail.com>"]

[dependencies]
tungstenite = "0.4.0"
serde_json = "1.0.0"
serde_derive = "1.0.11"
serde = "1.0.11"
log = "0.3.8"
env_logger = "0.4.3"
rand = "0.3.0"
url = "1.5.0"
common = { path = "../common" }
