[package]
name = "funnel"
version = "0.1.0"
authors = ["Justin Goldizen <justin.r.goldizen@gmail.com>"]

[dependencies]
tungstenite = "0.4.0"
mio = "0.6.0"
slab = "0.4.0"
serde_json = "1.0.0"
serde_derive = "1.0.11"
serde = "1.0.11"
toml = "0.4.5"
log = "0.3.8"
env_logger = "0.4.3"
common = { path = "../common" }
